--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [project]
 name = "image-stitcher"
-version = "0.1.0"
-description = "Add your description here"
+version = "0.3.0"
+description = "Image stitching for microscopy with GPU acceleration support."
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = "==3.10.*"
 dependencies = [
     "aicsimageio",
     "basicpy==1.2.0",
@@ -22,18 +22,21 @@ dependencies = [
     "tifffile",
     "tqdm",
     "zarr<3",
-    "hyperactive>=4.4.0,<4.5",
-    "torch>=2.10.0.dev0",
-    "torchvision>=0.23.0",
-    "pytorch-triton"
+    "hyperactive==4.5.*",
+    "torch",
+    "torchvision",
+    "pytorch-triton",
+    "scipy>=1.12,<1.15",
+    "scikit-learn>=1.7.2",
+    "gradient-free-optimizers<=1.8.0",
 ]
 
-[tool.uv.sources]
-torch = { index = "pytorch" }
-torchvision = { index = "pytorch" }
-pytorch-triton = { index = "pytorch" }
-
-[[tool.uv.index]]
-name = "pytorch"
-url = "https://download.pytorch.org/whl/nightly/cu130"
-explicit = true
+# [tool.uv.sources]
+# torch = { index = "pytorch" }
+# torchvision = { index = "pytorch" }
+# pytorch-triton = { index = "pytorch" }
+#
+# [[tool.uv.index]]
+# name = "pytorch"
+# url = "https://download.pytorch.org/whl/nightly/cu130"
+# explicit = true
